force-app/main/default/objects/Exchange_Order_Match__c/Exchange_Order_Match__c.object-meta.xml
<CustomObject>
    <description>representing the execution of a trade between sell and buy orders.</description>
    <label>Exchange Order Match</label>
    <nameField>
        <displayFormat>OrderMatch-{00000}</displayFormat>
        <label>Exchange Order Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Order Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>