force-app/main/default/objects/Exchange_Order_Match__c/fields/Buy_Order__c.field-meta.xml
<CustomField>
    <fullName>Buy_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to exchange order(buy)</description>
    <inlineHelpText>lookup to exchange order(buy)</inlineHelpText>
    <label>Buy Order</label>
    <referenceTo>Exchange_Order__c</referenceTo>
    <relationshipLabel>Exchange Order Matches</relationshipLabel>
    <relationshipName>Exchange_Order_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>