force-app/main/default/objects/Exchange_Order_Match__c/fields/Sell_Order__c.field-meta.xml
<CustomField>
    <fullName>Sell_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to exchange order(sell)</description>
    <inlineHelpText>lookup to exchange order(sell)</inlineHelpText>
    <label>Sell Order</label>
    <referenceTo>Exchange_Order__c</referenceTo>
    <relationshipLabel>Exchange Order Matches (Sell Order)</relationshipLabel>
    <relationshipName>Exchange_Order_Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>